# ccmodel

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
ccmodel/__config__/: ccmodel_config.py
ccmodel/code_models/: .decorators.py.swp  alias_objects.py  class_object.py  code_utils.py  comment_object.py  decorators.py  directive_objects.py  enumeration.py  expr.py  factories.py  function.py  function_param.py  header.py  member.py  member_function.py  namespace.py  parse_object.py  template.py  template_param.py  types.py  union.py  variable.py
ccmodel/parsers/: cpp_parse.py
ccmodel/test/: common.py  test_class.py  test_enumeration.py  test_function.py  test_namespace.py  test_parse.py  test_templates.py  test_union.py  test_variable.py
ccmodel/test/test_hh/: .parse_test.hh.swp  parse_test.hh  templates_test.hh
ccmodel/test/test_out/: parse_test.ccms
ccmodel/utils/: code_utils.py  summary.py
src/__config__/: clang_config.py
src/ccmodel/: ccm.py  reader.py  test_read.py
src/ccmodel/__config__/: ccmodel_config.py  clang_config.py
src/ccmodel/code_models/: basic.py  header.py  pointers.py  variants.py
src/ccmodel/test/: test_namespace.py
src/ccmodel/test/test_hh/: test_load.py
src/ccmodel/utils/: files.py
src/code_models/: basic.py  class_object.py  comment_object.py  decls.py  directive_objects.py  function.py  header.py  stmt.py
src/parsers/: cpp_parse.py
src/test/: test_class.py  test_parse.py  test_union.py  test_variable.py
src/utils/: code_utils.py  file_sys.py
test/: test_read.py  test_templates.py
