[project]
name = "ccmodel"
version = "0.1.1"
description = "Clang-10 powered C/C++ code modeling"
authors = [
    {name = "Gabe Ingram", email = "gabriel.ingram@colorado.edu"},
]
dependencies = [
    "loguru~=0.5",
    "graphlib-backport~=1.0",
    "regex~=2021.10",
    "orjson~=3.6",
    "-e ../clang_tools",
    "docker~=5.0",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "c",
    "cc",
    "c++",
    "cpp",
    "parse",
    "code",
    "model"
]

[project.urls]
homepage = "https://github.com/gjingram/ccmodel"
repository = "https://github.com/gjingram/ccmodel"

[project.scripts]
ccm = "ccmodel.ccm:run_ccm"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
package-dir = "src"
[tool.pdm.dev-dependencies]
dev = [
    "pytest~=6.2",
    "black<22,>=21.9b0",
    "vulture~=2.3",
    "twine~=3.4",
    "setuptools~=58.3",
]
